# audio-to-subs

./: .dockerignore  .env.example  .gitignore  .gitmodules  .mistral_api_key.example  .pre-commit-config.yaml  ARCHITECTURE.md  CONTAINER_GUIDE.md  Dockerfile  Dockerfile.dev  Makefile  QUALITY.md  README.md  ROADMAP.md  STATUS.md  WARP.md  dev-backup.bundle  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  work.md
.github/workflows/: tests.yml
dev/: .sops.yaml  secrets.mistral.yaml
dev/reference/: BAZARR_API_RESEARCH.md  SUBTITLE_NAMING_CONVENTIONS.md
dev/v1/: API.md  ARCHITECTURE.md  QUALITY.md
dev/v2/: API.md  ARCHITECTURE.md  AUTH.md  BAZARR_INTEGRATION.md  DATABASE.md  DEPLOYMENT.md  FRONTEND.md  MIGRATION.md  MILESTONES.md  MISTRAL_USAGE_PROBE.md  PIPELINE_CHANGES.md  QUEUE.md  README.md  TESTING.md
features/: audio_to_subs.feature  video_to_subtitles.feature  video_to_subtitles_format.feature  video_to_subtitles_pipeline.feature
features/steps/: audio_steps.py  video_steps.py
mistral_doc/: audio_transcription
src/: __main__.py  audio_extractor.py  audio_splitter.py  cli.py  config_parser.py  logging_config.py  pipeline.py  subtitle_generator.py  transcription_client.py
src/audio_to_subs/: __init__.py
tests/: test_audio_extractor.py  test_audio_splitter.py  test_cli.py  test_config_parser.py  test_formats_and_batch.py  test_integration.py  test_logging_config.py  test_main.py  test_pipeline.py  test_progress_reporting.py  test_subtitle_generator.py  test_transcription_client.py
